--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -16,11 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up GraalVM 24
+    - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
-        java-version: '24'
-        distribution: 'graalvm'
+        java-version: '21'
+        distribution: 'temurin'
 
     - name: Build with Maven
       run: mvn verify
