--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -23,4 +23,4 @@ jobs:
         distribution: 'temurin'
 
     - name: Build with Maven
-      run: mvn verify
+      run: mvn verify assembly:single
