--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,3 +24,13 @@ jobs:
 
     - name: Build with Maven
       run: mvn verify assembly:single
+
+    - name: Get app distribution artifact name
+      id: artifact_name
+      run: cd target && echo "artifact_name=$(ls -1 *.tar.gz)" >> "$GITHUB_OUTPUT"      
+
+    - name: Upload app distribution artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ steps.artifact_name.outputs.artifact_name }}
+        path: target/${{ steps.artifact_name.outputs.artifact_name }}
