--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,10 @@
 
     <groupId>net.consensys</groupId>
     <artifactId>peers-history</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>${revision}</version>
 
     <properties>
+        <revision>1.0.0-SNAPSHOT</revision>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
